--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Dreamly home!</h1>
-    <a href="<% ">Link to dream log list</a>
+    <a href="">Link to dream log list</a>
     <a href="">Link to create dream log</a>
     <a href="">Link to usefull lucid dreaming advice</a>
 </body>
