created bare index page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Dreamly home!</h1>
-    <a href="">Link to dream log list</a>
-    <a href="">Link to create dream log</a>
-    <a href="">Link to usefull lucid dreaming advice</a>
+    <a href="/dreamly/logs">Link to dream log list</a>
+    <a href="/dreamly/new">Link to create dream log</a>
+    <a href="/dreamly/tips">Link to usefull lucid dreaming advice</a>
 </body>
 </html>
