created new route

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Dreamly home!</h1>
     <a href="/dreamly/logs">Link to dream log list</a>
-    <a href="/dreamly/new">Link to create dream log</a>
+    <a href="/dreamly/newlog">Link to create dream log</a>
     <a href="/dreamly/tips">Link to usefull lucid dreaming advice</a>
 </body>
 </html>
