updated index and new route to render ejs pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dreamly</title>
+    <title>Dreamsly</title>
 </head>
 <body>
-    <h1>Create a log</h1>
+    <h1>List of logs</h1>
 </body>
 </html>
