--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dreamsly</title>
+    <title>Dreamly</title>
 </head>
 <body>
     <h1>List of logs</h1>
+    <ul>
+        <% for(let i = 0; i < allDreams.length; i++) { %>
+            <li>
+                <a href='/dreamly/logs/<%= i %>'><%= allDreams.nightOf%></a>
+            </li>
+        <% } %>
+    </ul>
 </body>
 </html>
