--- a/views/newlog.ejs
+++ b/views/newlog.ejs
@@ -7,6 +7,13 @@
     <title>Dreamly</title>
 </head>
 <body>
-    <h1>Create a log</h1>
+    <h1>Log a dream</h1>
+    <form action="/dreamly/logs" method="POST">
+        Night of dream: <input type='date' name='nightOf%'/><br>
+        Setting of dream: <input type="text" name='Setting'/><br>
+        Description: <input type='text' name='Description'/><br>
+        Emotions: <input type='text' name='Emotions'/><br>
+        <input type='submit' value='Log dream'/>
+    </form>
 </body>
 </html>
