--- a/views/newlog.ejs
+++ b/views/newlog.ejs
@@ -10,9 +10,9 @@
     <h1>Log a dream</h1>
     <form action="/dreamly/logs" method="POST">
         Night of dream: <input type='date' name='nightOf%'/><br>
-        Setting of dream: <input type="text" name='Setting'/><br>
-        Description: <input type='text' name='Description'/><br>
-        Emotions: <input type='text' name='Emotions'/><br>
+        Setting of dream: <input type="text" name='setting'/><br>
+        Description: <input type='text' name='description'/><br>
+        Emotions: <input type='text' name='emotions'/><br>
         <input type='submit' value='Log dream'/>
     </form>
 </body>
