updated form in newlog.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,10 +8,25 @@
     <title>Dreamly</title>
 </head>
 <body>
-    <h1>Dreamly home!</h1>
-    <a href="/dreamly/logs">Link to dream log list</a>
-    <a href="/dreamly/newlog">Link to create dream log</a>
-    <a href="/dreamly/tips">Link to useful lucid dreaming advice</a>
+    <div class="jumbotron text-center">
+        <h1>Dreamly</h1>
+        <p>Your personal dream journal</p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <a href="/dreamly/newlog">Log your dreams</a>
+                <p>Write down important details about your dreams before you forget</p>
+            </div>
+            <div class="col-sm-4">
+                <a href="/dreamly/logs">View past logs</a>
+                <p>A convenient collection of your past logs</p>
+            </div>
+            <div class="col-sm-4">
+                <a href="/dreamly/tips">Lucid dreaming tips</a>
+                <p>Useful information that you can incorporate into your everyday life to help facilitate lucid dreaming experiences</p>
+            </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
