--- a/views/newlog.ejs
+++ b/views/newlog.ejs
@@ -10,12 +10,13 @@
 <body>
     <h1>Log a dream</h1>
     <form action="/dreamly/logs" method="POST">
-        Night of dream: <input type='date' name='nightOf%'/><br>
+        Night of dream: <input type='date' name='nightOf'/><br>
         Setting of dream: <input type="text" name='setting'/><br>
         Description: <input type='textarea' name='description'/><br>
         Emotions: <input type='text' name='emotions'/><br>
         <input type='submit' value='Log dream'/>
     </form>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
