--- a/views/newlog.ejs
+++ b/views/newlog.ejs
@@ -11,7 +11,7 @@
     <h1>Log a dream</h1>
     <form action="/dreamly/logs" method="POST">
         <div class="form-group">
-            <label for="nightOfInput">Night of dream (Ex. Oct 24, 2020)</label>
+            <label for="nightOfInput">Night of dream (Ex. 10/06/21)</label>
             <input type='text' class="form-control" name='nightOf'/><br>
         </div>
         <div class="form-group">
