created statis css

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/public/assets/style.css">
     <title>Dreamly</title>
 </head>
 <body>
@@ -16,16 +16,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <a href="/dreamly/newlog">Log your dreams</a>
-                <p>Write down important details about your dreams before you forget</p>
+                <a href="/dreamly/newlog"><p class="text-center">Log your dream</p></a>
+                <p class="text-center">Write down important details about your dreams before you forget</p>
             </div>
             <div class="col-sm-4">
-                <a href="/dreamly/logs">View past logs</a>
-                <p>A convenient collection of your past logs</p>
+                <a href="/dreamly/logs"><p class="text-center">View past logs</p></a>
+                <p class="text-center">A convenient collection of your past logs</p>
             </div>
             <div class="col-sm-4">
-                <a href="/dreamly/tips">Lucid dreaming tips</a>
-                <p>Useful information that you can incorporate into your everyday life to help facilitate lucid dreaming experiences</p>
+                <a href="/dreamly/tips"><p class="text-center">Useful lucid dreaming advice</p></a>
+                <p class="text-center">Useful information that you can incorporate into your everyday life to help facilitate lucid dreaming experiences</p>
             </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
