updated delete functionality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="jumbotron text-center">
         <h1>Dreamly</h1>
-        <p>Your personal dream journal</p>
+        <p>Your personal dream journal to facilitate lucid dreaming</p>
     </div>
     <div class="container">
         <div class="row">
