--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,7 +17,11 @@
     <p>Description: <%=dreams.description%></p>
     <p>Emotions: <%=dreams.emotions%></p>
     </div>
-    <a href="/dreamly/logs">Back to logs</a>
+    <form action="/dreamly/logs/<%=dreams._id%>?_method=DELETE" method="POST">
+        <input type="submit" value="Delete entry">
+    </form>
+    <a href="/dreamly/logs/<%=dreams._id %>/edit">Edit entry</a>
+    <a href="/dreamly/logs">Back to entries</a>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
