--- a/views/editlog.ejs
+++ b/views/editlog.ejs
@@ -9,6 +9,26 @@
     <title>Dreamly</title>
 </head>
 <body>
+    <h1>Edit log</h1>
+    <form action="/dreamly/logs/<%=dreams._id%>">
+        <div class="form-group">
+            <label for="nightOfInput">Night of dream (Ex. 10/06/21)</label>
+            <input type='text' class="form-control" name='nightOf' value="<%=dreams.nightOf%>"/><br>
+        </div>
+        <div class="form-group">
+            <label for='settingOfDream'>Setting(s) of dream</label>
+            <input type="text" class="form-control" name='setting' value="<%=dreams.setting%>"/><br>
+        </div>
+        <div class="form-group">
+            <label for="descriptionOfDream">Description of dream</label>
+            <input type='textbox' class="form-control" name='description' value="<%=dreams.description%>"/><br>
+        </div>
+        <div class="form-group">
+            <label for="emotionsFelt">Emotion(s) experienced</label>
+            <input type='text' class="form-control" name='emotions' value="<%=dreams.emotions%>"/><br>
+        <input type='submit' value='Update dream'/>
+        </div>
+    </form>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
