--- a/views/advice.ejs
+++ b/views/advice.ejs
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/assets/style.css">
     <title>Dreamly</title>
 </head>
 <body>
+    <div class="jumbotron text-center">
     <h1>
         Advice for lucid dreaming
     </h1>
-    <div>
+    <a href="/dreamly" id="home-btn">Back to home</a>
+    <hr>
+    </div>
+    <div class="advice">
         <p>
             One of the most imporant things about learning how to lucid dream is understanding what a lucid dream actually is, and how to recognize when you're dreaming. 
         </p>
@@ -20,7 +30,7 @@
             A lucid dream can be defined as a dream in which you've realized that you're dreaming and even gain the ability to freely manipulate the things happening around you. Lucid dreaming gives you the opportuninty to do things that wouldn't be possible in the real world.
         </p>
         <p>
-            The first step you can take to help you recognize when you're in a dream state is writing down your dreams as soon as you wake up. Over time, this can help you remember key details of your dreams more vividly, making it easier to spot the key differences between real world interactions and those that you have in your dreams. The easier that it is for you to realize that you are in a dream state, the easier it'll be to lucid dream.
+            The first step you can take to help you recognize when you're in a dream state is writing down your dreams as soon as you wake up. Over time, this can help you remember key details of your dreams more vividly, making it easier to spot the key differences between real world interactions and those that you have in your dreams. The easier it is for you to realize that you are in a dream state, the easier it'll be to lucid dream.
         </p>
         <p>
             The second step you can take to help you recognize when you're dreaming is to give yourself reality checks throughout the day. This can be achieved by simply looking at the clock or giving yourself a small pinch. Using the small pinch as an example, in the real world you'll feel an immediate sensory response to the pinch, but in a dream state you might get a warped sensory response or maybe not feel anything at all. This could help you realize that you're not in reality, but in your own dream, which is ultimately the goal of performing these reality checks.
@@ -35,7 +45,6 @@
             Lucid dreaming gives you the opportunity to do incredible things that could never occur in reality. Teaching yourself this ability is a fun, harmless way to make dreaming more fun and purposeful. Implement these strategies into your everyday life and you'll soon learn how to lucid dream like a pro!  
         </p>
     </div>
-    <a href="/dreamly">Back to home</a>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
