--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/assets/style.css">
     <title>Dreamly</title>
 </head>
 <body>
     <div class="jumbotron text-center">
         <h1>Dreamly</h1>
-        <p>Your personal dream journal to facilitate lucid dreaming</p>
+        <h5>Your personal dream journal to facilitate lucid dreaming</h5>
+        <hr>
     </div>
     <div class="container">
         <div class="row">
@@ -20,8 +27,8 @@
                 <p class="text-center">Write down important details about your dreams before you forget</p>
             </div>
             <div class="col-sm-4">
-                <a href="/dreamly/logs"><p class="text-center">View past logs</p></a>
-                <p class="text-center">A convenient collection of your past logs</p>
+                <a href="/dreamly/logs"><p class="text-center">View past entries</p></a>
+                <p class="text-center">A convenient collection of your past dreams</p>
             </div>
             <div class="col-sm-4">
                 <a href="/dreamly/tips"><p class="text-center">Useful lucid dreaming advice</p></a>
