--- a/views/editlog.ejs
+++ b/views/editlog.ejs
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/assets/style.css">
     <title>Dreamly</title>
 </head>
 <body>
+    <div class="jumbtotron text-center">
     <h1>Edit log</h1>
+    <hr>
+    </div>
     <form action="/dreamly/logs/<%=dreams._id%>?_method=PUT" method="POST">
         <div class="form-group">
             <label for="nightOfInput">Night of dream (Ex. 10/06/21)</label>
@@ -20,12 +29,12 @@
             <input type="text" class="form-control" name='setting' value="<%=dreams.setting%>"/><br>
         </div>
         <div class="form-group">
-            <label for="descriptionOfDream">Description of dream</label>
-            <input type='textbox' class="form-control" name='description' value="<%=dreams.description%>"/><br>
+            <label for="emotionsFelt">Emotion(s) experienced</label>
+            <input type='textbox' class="form-control" name='emotions' value="<%=dreams.emotions%>"/><br>
         </div>
         <div class="form-group">
-            <label for="emotionsFelt">Emotion(s) experienced</label>
-            <input type='text' class="form-control" name='emotions' value="<%=dreams.emotions%>"/><br>
+            <label for="descriptionOfDream">Description of dream</label>
+            <input type='text' class="form-control" name='description' value="<%=dreams.emotions%>"/><br>
         <input type='submit' value='Update entry'/>
         </div>
     </form>
