--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/assets/style.css">
     <title>Dreamly</title>
 </head>
 <body>
-    <h1>List of logs</h1>
-    <ul>
-        <% for(let i = 0; i < dreams.length; i++) { %>
-            <li>
-                <a href='/dreamly/logs/<%= dreams[i]._id %>'><%= dreams[i].nightOf %></a>
-            </li>
-        <% } %>
-    </ul>
-    <a href="/dreamly">Back to home</a>
+    <div class="jumbotron text-center">
+        <h1>Dream entries</h1>
+        <div class='navigation'>
+            <a href="/dreamly" id="home-btn">Back to home</a>
+        </div>
+        <hr>
+    </div>
+    <div>
+        <ul>
+            <% for(let i = 0; i < dreams.length; i++) { %>
+                <li>
+                    <a href='/dreamly/logs/<%= dreams[i]._id %>'><%= dreams[i].nightOf %></a>
+                </li>
+                <% } %>
+            </ul>
+        <a href="/dreamly/newlog" id='create-btn'>Create a new entry</a>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
