--- a/views/editlog.ejs
+++ b/views/editlog.ejs
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
             <label for="descriptionOfDream">Description of dream</label>
-            <input type='text' class="form-control" name='description' value="<%=dreams.emotions%>"/><br>
+            <input type='text' class="form-control" name='description' value="<%=dreams.description%>"/><br>
         <input type='submit' value='Update entry'/>
         </div>
     </form>
